--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/tritonus_misc.jar"/>
 	<classpathentry kind="lib" path="lib/tritonus_mp3.jar"/>
 	<classpathentry kind="lib" path="lib/weka.jar"/>
+	<classpathentry kind="lib" path="lib/substance.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
