--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="lib/tritonus_mp3.jar"/>
 	<classpathentry kind="lib" path="lib/weka.jar"/>
 	<classpathentry kind="lib" path="lib/substance.jar"/>
+	<classpathentry kind="lib" path="lib/jcommon-1.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
